--- a/ControleEstacionamento/Views/TabelaPreco/Index.cshtml
+++ b/ControleEstacionamento/Views/TabelaPreco/Index.cshtml
@@ -1,29 +1,29 @@
 ﻿@model IEnumerable<ControleEstacionamento.Entidades.TabelaPreco>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Tabelas de Preços";
 }
 
-<h2>Index</h2>
+<h2>Tabelas de Preços</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Nova", "Create")
 </p>
-<table class="table">
+<table class="table table-condensed table-hover table-responsive table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.descricao)
         </th>
-        <th>
+        <th class="text-center">
             @Html.DisplayNameFor(model => model.inicioVigencia)
         </th>
-        <th>
+        <th class="text-center">
             @Html.DisplayNameFor(model => model.finalVigencia)
         </th>
-        <th>
+        <th class="text-center">
             @Html.DisplayNameFor(model => model.valorHoraInicial)
         </th>
-        <th>
+        <th class="text-center">
             @Html.DisplayNameFor(model => model.valorHoraAdicional)
         </th>
         <th></th>
@@ -34,23 +34,23 @@
         <td>
             @Html.DisplayFor(modelItem => item.descricao)
         </td>
-        <td>
+        <td class="text-center">
             @Html.DisplayFor(modelItem => item.inicioVigencia)
         </td>
-        <td>
+        <td class="text-center">
             @Html.DisplayFor(modelItem => item.finalVigencia)
         </td>
-        <td>
+        <td class="text-right">
             @Html.DisplayFor(modelItem => item.valorHoraInicial)
         </td>
-        <td>
+        <td class="text-right">
             @Html.DisplayFor(modelItem => item.valorHoraAdicional)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.handle }) |
-            @Html.ActionLink("Details", "Details", new { id=item.handle }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.handle })
-        </td>
+            @Html.ActionLink(" ", "Edit", new { id=item.handle }, htmlAttributes: new { @class = "glyphicon glyphicon-edit", title = "Editar" }) |
+            @Html.ActionLink(" ", "Details", new { id = item.handle }, htmlAttributes: new { @class = "glyphicon glyphicon-search", title = "Detalhes" } ) |
+            @Html.ActionLink(" ", "Delete", new { id=item.handle }, htmlAttributes: new { @class = "glyphicon glyphicon-remove", title = "Apagar" })
+        </td >
     </tr>
 }
 
