--- a/ControleEstacionamento/Views/TabelaPreco/Create.cshtml
+++ b/ControleEstacionamento/Views/TabelaPreco/Create.cshtml
@@ -1,18 +1,18 @@
 ﻿@model ControleEstacionamento.Entidades.TabelaPreco
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Nova Tabela de Preços";
 }
 
-<h2>Create</h2>
+<h2>Nova</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>TabelaPreco</h4>
+        <h4>Tabela de Preço</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -57,16 +57,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Criar" class="btn btn-default" /> |
+                @Html.ActionLink("Voltar", "Index")
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/validations_pt-br")
 }
