--- a/ControleEstacionamento/Views/TabelaPreco/Delete.cshtml
+++ b/ControleEstacionamento/Views/TabelaPreco/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model ControleEstacionamento.Entidades.TabelaPreco
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Apagar Tabela de Preços";
 }
 
-<h2>Delete</h2>
+<h2>Apagar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você tem certeza que deseja apagar esse registro?</h3>
 <div>
-    <h4>TabelaPreco</h4>
+    <h4>Tabela de Preço</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -57,8 +57,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Apagar" class="btn btn-default" /> |
+            @Html.ActionLink("Voltar", "Index")
         </div>
     }
 </div>
