--- a/ControleEstacionamento/Views/TabelaPreco/Details.cshtml
+++ b/ControleEstacionamento/Views/TabelaPreco/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model ControleEstacionamento.Entidades.TabelaPreco
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalhes da Tabela de Preço";
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
-    <h4>TabelaPreco</h4>
+    <h4>Tabela de Preço</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -53,6 +53,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.handle }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.handle }) |
+    @Html.ActionLink("Voltar", "Index")
 </p>
