--- a/ControleEstacionamento/Views/TabelaPreco/Edit.cshtml
+++ b/ControleEstacionamento/Views/TabelaPreco/Edit.cshtml
@@ -1,18 +1,18 @@
 ﻿@model ControleEstacionamento.Entidades.TabelaPreco
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar Tabela de Preços";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>TabelaPreco</h4>
+        <h4>Tabela de Preços</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.handle)
@@ -59,16 +59,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Gravar" class="btn btn-default" /> |
+                @Html.ActionLink("Voltar", "Index")
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/validations_pt-br")
 }
