--- a/ControleEstacionamento/Views/Shared/_Layout.cshtml
+++ b/ControleEstacionamento/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Entrada e Saída de Veículos", "Index", "MovimentacaoVeiculo")</li>
                     <li>@Html.ActionLink("Tabelas de Preços", "Index", "TabelaPreco")</li>
                 </ul>
             </div>
