--- a/ControleEstacionamento/Views/MovimentacaoVeiculo/Index.cshtml
+++ b/ControleEstacionamento/Views/MovimentacaoVeiculo/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Movimentação de Veículos";
     bool faltaConfiguracao = ViewBag.FaltaConfiguracao;
 }
@@ -15,14 +14,61 @@
         @if (!faltaConfiguracao)
         {
             <div class="form-group">
-                @Html.Label("Placa", htmlAttributes: new { @class = "control-label col-md-2" });
-                <div class="col-md-10">
-                    @Html.Editor( "numeroPlaca", new { htmlAttributes = new { @class = "form-control" } })
+                @Html.Label("Placa", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-2">
+                    @Html.Editor("numeroPlaca", new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessage("numeroPlaca", "", new { @class = "text-danger" })
                 </div>
-
-                &nbsp;
-                <button type="button" class="btn btn-default ce-botao-carregar form-control col-md11" onclick="CarregarFormConfirmacao();">Registrar</button>
+                <div class="col-md-2">
+                    <button type="button" class="btn btn-default ce-botao-carregar form-control col-md3" onclick="CarregarFormConfirmacao();">Registrar</button>
+                </div>
             </div>
         }
     </div>
 }
+
+<div id="registro" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <button type="button" class="close" data-dissmiss="modal" onclick="$('#registro').modal('hide');">&times;</button>
+                <h4 class="modal-title">Registro</h4>
+            </div>
+
+            <div class="modal-body">
+                <div id="conteudoRegistro"></div>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dissmiss="modal" onclick="$('#registro').modal('hide');">Fechar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/bundles/validations_pt-br")
+    <script type="text/javascript">
+        $(document).ready(function ($) {
+            $("#numeroPlaca").inputmask("mask", { "mask": "aaa9999", casing: 'upper' });
+        });
+
+        function CarregarFormConfirmacao() {
+            $.ajax({
+                type: "GET",
+                url: "@Url.Action("Registro", "MovimentacaoVeiculo")",
+                data: { "numeroPlaca": $("#numeroPlaca").val() },
+                success: function (retorno) {
+                    $("#conteudoRegistro").html(retorno);
+                    $("#registro").modal("show");
+                }
+            });
+        };
+    </script>
+}
+
